--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "pokemon-path",
   "version": "0.0.0",
   "private": true,
+  "engines": {
+    "node": "8.11.3"
+  },
   "scripts": {
     "start": "node ./bin/www",
     "devstart": "nodemon ./bin/www"
