--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "morgan": "^1.9.0",
     "pg": "^7.4.3",
     "pug": "^2.0.0-beta11",
-    "serve-favicon": "^2.5.0",
-    "sqlite3": "^4.0.2"
+    "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.3"
