--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
     "compression": "^1.7.3",
     "cookie-parser": "^1.4.3",
     "debug": "^2.6.9",
-    "express": "^4.16.3",
-    "helmet": "^3.13.0",
-    "http-errors": "^1.6.3",
-    "morgan": "^1.9.0",
-    "pg": "^7.4.3",
-    "pug": "^2.0.0-beta11",
+    "express": "^4.16.4",
+    "helmet": "^3.14.0",
+    "http-errors": "^1.7.1",
+    "morgan": "^1.9.1",
+    "pg": "^7.5.0",
+    "pug": "^2.0.3",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
-    "nodemon": "^1.18.3"
+    "nodemon": "^1.18.4"
   }
 }
