--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.16.4",
     "helmet": "^3.14.0",
     "http-errors": "^1.7.1",
+    "moment": "^2.23.0",
     "morgan": "^1.9.1",
     "pg": "^7.5.0",
     "pug": "^2.0.3",
